--- a/video-test.html
+++ b/video-test.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
 </head>
-<body>
+<body onload="myFunction()">
+  <button id="test" style="display: none;">Test</button>
   <script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
 <div id="myLandbot" style="width: 100%; height: 700px"></div>
 <script>
@@ -16,7 +17,11 @@
   });
 </script>
 <script>
-	document.getElementsByTagName("video")[0].autoplay = 1;
+	
+	function myFunction() {
+		document.getElementsByTagName("video")[0].autoplay = 1;
+	}
+	
 </script>
 </body>
 </html>
